--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,19 @@ img{
     display: none;
 }
 
+ul{
+    padding: 0%;
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+}
+
+li{
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+}
+
 .active{
     display: block;
 }
@@ -14,18 +27,27 @@ img{
     width: 750px;
     margin: 50px auto ;
 
-    border: 2px dashed black;
+   
 
     position: relative;
 }
 
 .bi{
+    
+
     position: absolute;
     font-size: 2rem;
     top: 50%;
     transform: translateY(-50%);
 }
 
+.bi:hover{
+    cursor: pointer;
+}
+.bi:active {
+    
+    transform: translateY(-50%)  scale(1.1)  ;
+}
 #right-slider{
     left: 105%;
 }
