--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,26 @@
 /* generic */
-img{
+#img-container > img{
     height: 100%;
     width: 100%;
     display: none;
 }
 
-ul{
-    padding: 0%;
-    list-style-type: none;
-    width: 100%;
-    height: 100%;
-}
 
-li{
-    list-style-type: none;
-    width: 100%;
-    height: 100%;
-}
 
-.active{
-    display: block;
-}
 #carousel{
-
+    
     height: 500px;
-    width: 750px;
+    width: 900px;
     margin: 50px auto ;
-
-   
-
+    
+    
+    
     position: relative;
 }
 
 .bi{
     
-
+    
     position: absolute;
     font-size: 2rem;
     top: 50%;
@@ -57,7 +43,36 @@ li{
 }
 
 #img-container{
+    border-radius: 15px;
+    overflow-y: hidden;
     margin: 0%;
     width: 100%;
     height: 100%;
+}
+
+#img-container > img.active{
+    display: block;
+}
+
+#thumbnail{
+    margin-top: 10px;
+    height: 80px;
+    width: 900px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+#thumbnail > img{
+    margin-top: 5px;
+    filter: grayscale(1);
+    border-radius: 15px;
+    width: calc(19%);
+    height: 100%;
+}
+
+#thumbnail > img.active{
+
+    filter: grayscale(0);
+    box-shadow: 0 0 5px 0 darkblue;
 }
